Gnome surface and login screen corrupted on Intel A750
Affected version
Fedora 41 gnome-shell-47.1-1.fc41.src.rpm Using Wayland Extensions deactivated
Bug summary
This bug has also been filed at Fedora Bugzilla
After installing F41 from the live image over a previously installed F39 instance my main screen (32", 1440p) connected to an Intel A750 is corrupted/distorted. This manifests as every other line of pixels displaced by about 5mm to the side. The problem does not exist on a secondary screen connected to the onboard graphics. This bug exists while installing F41 from the live image as well as booting the system after install.
I can exclude any hardware error, as the screen works fine under Windows as well as during bootup. The start screen during bootup is displayed correctly right until the gnome login screen appears. The error continues to be present even after the login. Interestingly, even at this stage, the mouse pointer is not affected by the error under all circumstances. I also verified that the screen corruption is not connected to screen orientation, resolution, scaling or refresh rate. The bug also does not show up in screenshots, therefore I attached a photo of the error on screen as example.
I have been looking around log files to identify error messages or warnings possibly connected to the problem but have not been successful so far. Therefore, I am not certain gnome-shell is package of origin for the bug.
For general information I will attach the output of 'fpaste --sysinfo --printonly' as well as 'inxi -Fzxx'. If further data is needed, I'm going to happily provide answers to all request but can not promise to reply the very same day every day.
Thanks a lot!
Steps to reproduce
- Bootup to gnome login screen
What happened
Screen connected to Intel A750 is corrupted/distorted.
What did you expect to happen
Normal display of gnome login screen and desktop after login.